--- a/index.html
+++ b/index.html
@@ -4,8 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <h1>hello</h1>
+    <div id="main">
+        <div id="navbar_sidebar">
+            <div id="sidebar_head">
+                <h1>Karande Classes</h1>
+            </div>
+            <div id="sidebar_list">
+                <ul>
+                    <div class="line"></div>
+                    <li><a href="./index.html">Home</a></li>
+                    <div class="line"></div>
+                    <li><a href="./courses.html">Courses</a></li>
+                    <div class="line"></div>
+                    <li><a href="./aboutus.html">About Us</a></li>
+                    <div class="line"></div>
+                    <li><a href="./contactus.html">Contact Us</a></li>
+                    <div class="line"></div>
+                </ul>
+            </div>
+            <div id="sidebar_footer">
+                <div id="copyright">
+                    <p>&copy; All Rights Reserved , 2023</p>
+                </div>
+                <div id="madeby">
+                    <p>Made By : <a href="https://github.com/vivekprajapati-exe">Vivek Prajapati</a></p>
+                </div>
+            </div>
+        </div>
+        <div id="hero" class="section_wrapper flex_wrapper_col">
+            <nav id="navbar">
+                <div id="navbar_logo">
+                    <h2>Karande Classes</h2>
+                </div>
+                <div id="navbar_menubox">
+                    <h2>Menu</h2>
+                    <i class="bi bi-plus-lg plus"></i>
+                </div>
+            </nav>
+            <div id="hero_content">
+
+            </div>
+        </div>
+    </div>
+
+    
+    <script src="js/main.js"></script>
 </body>
 </html>
